--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <!--Theme Color Of Page-->
     <meta name="theme-color" content="#109DFF">
     <!--Icon Of Page-->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" href="%PUBLIC_URL%/assets/base/img/logo/img-logo.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/base/img/logo/img-logo.svg">
     <!--A Link Tag For When App Is Installed-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--Title Of Page-->
