--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/base/img/logo/img-logo.svg">
     <!--A Link Tag For When App Is Installed-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!--Linking Css File-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/base/dist/style.css">
     <!--Title Of Page-->
     <title>Calculator Made By Mahdi Tasha</title>
 </head>
